# pypiglatin

./: .gitignore  PKG-INFO  README.md  pyproject.toml  setup.py
docs/source/: index.rst
pypiglatin/: __init__.py
